--- a/Hjemmeside/style.css
+++ b/Hjemmeside/style.css
@@ -1,13 +1,23 @@
-a.butt1:link, a.butt1:visited {
+.butt1:link, .butt1:visited {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
-    padding: 10px 25px;
+    padding: 10px 10%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
-a.butt1:hover, a.butt1:active {
+.butt1:hover, .butt1:active {
     background-color: rgb(112, 111, 111);
     color: white;
+}
+
+h1 {
+    text-align: center;
+    color: black;
+    margin: 20px;
+    border: 1px solid;
 }
