--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
 .btn-1 {
     margin: 0;
     position: absolute;
-    top: 10%;
+    top: 10.7%;
     left: 30%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -46,7 +46,7 @@ h1 {
 .btn-2 {
     margin: 0;
     position: absolute;
-    top: 10%;
+    top: 10.7%;
     left: 50%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -54,7 +54,7 @@ h1 {
 .btn-3 {
     margin: 0;
     position: absolute;
-    top: 10%;
+    top: 10.7%;
     left: 70%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -62,7 +62,7 @@ h1 {
 .btn-4 {
     margin: 0;
     position: absolute;
-    top: 20%;
+    top: 19.3%;
     left: 30%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -70,7 +70,7 @@ h1 {
 .btn-5 {
     margin: 0;
     position: absolute;
-    top: 20%;
+    top: 19.3%;
     left: 50%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -78,10 +78,64 @@ h1 {
 .btn-6 {
     margin: 0;
     position: absolute;
-    top: 20%;
+    top: 19.3%;
     left: 70%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
+}
+hr.new1 {
+    position: absolute;
+    border-color: black;
+    background: black;
+    top: 9%;
+    width: 100%;
+    margin: 0%;
+    left: 23%;
+    height: 2px;
+    right: -20%;
+    max-width: 53.9%;
+}
+hr.new2 {
+    position: absolute;
+    border-color: black;
+    background: black;
+    color: white;
+    top: 17.5%;
+    width: 100%;
+    margin: 0%;
+    left: 23%;
+    height: 2px;
+    right: -20%;
+    max-width: 53.9%;
+}
+hr.new3 {
+    position: absolute;
+    border-color: black;
+    background: black;
+    color: white;
+    top: 26%;
+    width: 100%;
+    margin: 0%;
+    left: 23%;
+    height: 2px;
+    right: -20%;
+    max-width: 53.9%;
+}
+.vl1 {
+    border-left: 6px solid black;
+    height: 127px;
+    position: absolute;
+    left: 23%;
+    margin-left: -3px;
+    top: 65px;
+}
+.vl2 {
+    border-left: 6px solid black;
+    height: 127px;
+    position: absolute;
+    left: 77%;
+    margin-left: -3px;
+    top: 65px;
 }
 
 button {
