--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ hr.new3 {
     position: absolute;
     left: 23%;
     margin-left: -3px;
-    top: 65px;
+    top: 9%;
 }
 .vl2 {
     border-left: 6px solid black;
@@ -135,7 +135,7 @@ hr.new3 {
     position: absolute;
     left: 77%;
     margin-left: -3px;
-    top: 65px;
+    top: 9%;
 }
 
 button {
