--- a/style.css
+++ b/style.css
@@ -141,5 +141,11 @@ hr.new3 {
 button {
     font-family: cursive;
     font-size: 300;
-    text-decoration: underline overline double white;   
-}
+    text-decoration: underline overline double white;
+    border-radius: 12px; 
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);  
+} 
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
