--- a/Stickman/style.css
+++ b/Stickman/style.css
@@ -1,3 +1,60 @@
 body {
     background-color:  rgb(73, 73, 73);
 }
+
+h1 {
+    text-align: center;
+    background-color: rgb(59, 59, 59);
+    color: white;
+    margin: 20px;
+    border: 1px solid black;
+}
+
+.Stickman {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.btn-group button {
+    float: left;
+    position: relative;
+    background-color: rgb(59, 59, 59);
+    border: 1px solid black;
+    color: white;
+    padding: 10px 30px;
+    cursor: pointer;
+
+}
+
+.btn-group button:not(:last-child) {
+    border-right: none;
+}
+
+.btn-group::after {
+    content: "";
+    clear: both;
+}
+
+.btn-group button:hover {
+    background-color: rgb(119, 119, 119);
+}
+
+.btn-1 {
+    margin: 0;
+    position: absolute;
+    top: 10.7%;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+button {
+    font-family: cursive;
+    font-size: 300;
+    text-decoration: underline overline double white;
+    border-radius: 12px; 
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
