--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ hr.new3 {
 }
 .vl1 {
     border-left: 6px solid black;
-    height: 127px;
+    height: 17.6%;
     position: absolute;
     left: 23%;
     margin-left: -3px;
@@ -131,7 +131,7 @@ hr.new3 {
 }
 .vl2 {
     border-left: 6px solid black;
-    height: 127px;
+    height: 17.6%;
     position: absolute;
     left: 77%;
     margin-left: -3px;
