--- a/style.css
+++ b/style.css
@@ -26,13 +26,29 @@ article, aside, footer, header, main, nav, section {
     text-align: center
   }
 
-  li a {
+  nav ul {
+    display: inline-flex;
+    list-style: none;
     color: white;
-    text-decoration: none;
-    padding: 5px;
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: 20px;
   }
 
-  li a:hover {
+  nav ul li {
+    padding: 10px;
+    margin: 10px;
+  }
+
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+  }
+
+  nav ul li:hover {
+    color: lightgrey;
+  }
+  nav ul li a:hover {
     color: lightgrey;
     text-decoration: underline white;
   }
@@ -60,15 +76,6 @@ article, aside, footer, header, main, nav, section {
     text-decoration: none;
   }
   
-  li {
-    display: inline;
-    margin-left: 15px;
-    margin-right: 15px;
-    font-size: 20px;
-    font-variant: small-caps;
-    font-weight: bold;
-  }
-
   section {
     background-color: #bbbbbb;
     margin-top: 10px;
@@ -144,3 +151,4 @@ article, aside, footer, header, main, nav, section {
   color: white;
 
 }
+
