--- a/Loops/style.css
+++ b/Loops/style.css
@@ -17,6 +17,20 @@ article, aside, footer, header, main, nav, section {
         padding-bottom: 2.5rem;
         }
 
+    #clock { 
+        color: white;
+        font-size: 175px; 
+        width: 1000px; 
+        margin: auto; 
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        text-align: center; 
+        border: 4px solid white; 
+        border-radius: 20px; 
+      } 
+
   .banner {
     background-color: rgb(50, 50, 50);
     color: white;
