--- a/style.css
+++ b/style.css
@@ -1,149 +1,153 @@
 article, aside, footer, header, main, nav, section {
-    display: block;
+  display: block;
   }
 
-  h1, h2, h3, ul, li, a, p, 
-  article, aside, footer, header, main, nav, section {
-    padding: 0;
-    margin: 0;
+h1, h2, h3, ul, li, a, p, 
+article, aside, footer, header, main, nav, section {
+  padding: 0;
+  margin: 0;
   }
 
-  .banner {
-    background-color: rgb(50, 50, 50);
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    border: 1px solid black;
-
-  }
-
-  nav {
-    background-color: rgb(50, 50, 50);
-    padding: 5px;
-    margin-top: 4px;
-    border: 1px solid black;
-    height: auto;
-    text-align: center
-  }
-
-  nav ul {
-    display: inline-flex;
-    list-style: none;
-    color: white;
-    font-variant: small-caps;
-    font-weight: bold;
-    font-size: 20px;
-  }
-
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-  }
-
-  nav ul li:hover {
-    color: lightgrey;
-  }
-  nav ul li a:hover {
-    color: lightgrey;
-    text-decoration: underline white;
-  }
+  #page-container {
+      position: relative;
+      min-height: 98vh;
+       }
+  
+  #content-wrap {
+      padding-bottom: 2.5rem;
+      }
 
   #clock { 
-    color: white;
-    font-size: 175px; 
-    width: 1000px; 
-    margin: auto; 
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    text-align: center;
-    border: 4px solid white; 
-    border-radius: 20px; 
-} 
+      color: white;
+      font-size: 175px; 
+      width: 1000px; 
+      margin: auto; 
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      position: absolute;
+      text-align: center; 
+      border: 4px solid white; 
+      border-radius: 20px; 
+    } 
 
-
-  #current {
-    display: inline block;
-    color: white;
-    background-color: grey;
-    border-radius: 5px;
-    text-decoration: none;
-  }
-  
-  section {
-    background-color: #bbbbbb;
-    margin-top: 10px;
-    padding: 5px;
-  }
-  
-  article {
-    background-color: white;
-    margin-top: 5px;
-    padding: 10px 15px;
-  }
-  
-  main {
-    width: 40%;
-    float: left;
-    margin-bottom: 10px;
-    margin-left: 5%;
-  }
-  
-  aside {
-    background-color: #bbbbbb;
-    width: 40%;
-    float: right;
-    padding: 5px;
-    margin-top: 10px;
-    margin-right: 5%;
-  }
-  
-  #page-container {
-    position: relative;
-    min-height: 98vh;
-  }
-
-  #content-wrap {
-    padding-bottom: 2.5rem;
-  }
-
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 1.2rem;
-    background-color: rgb(50, 50, 50);
-    border: 1px solid black;
-    color: white;
-    padding: 5px;
-    float: left;
-    text-decoration: none;
-  }
-
-  footer a {
-    color: white;
-    text-decoration: none;
-    padding-left: 10px;
-  }
-
-  footer a:hover {
-    color: lightgrey;
-    text-decoration: underline white;
-  }
-
-
-  body {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(73, 73, 73);
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 15px; 
-}
-
-#crew {
+.banner {
+  background-color: rgb(50, 50, 50);
   color: white;
+  padding: 10px 20px;
+  text-align: center;
+  border: 1px solid black;
+  }
 
-}
+nav {
+  background-color: rgb(50, 50, 50);
+  padding: 5px;
+  margin-top: 4px;
+  border: 1px solid black;
+  height: auto;
+  text-align: center
+  }
 
+li a {
+  color: white;
+  text-decoration: none;
+  padding: 5px;
+  }
+
+li a:hover {
+  color: lightgrey;
+  text-decoration: underline white;
+  }
+
+#current {
+  display: inline block;
+  color: white;
+  background-color: grey;
+  border-radius: 5px;
+  text-decoration: none;
+  }
+
+li {
+  display: inline;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 20px;
+  font-variant: small-caps;
+  font-weight: bold;
+  }
+
+section {
+  background-color: #bbbbbb;
+  margin-top: 10px;
+  padding: 5px;
+  text-align: center;
+  }
+
+article {
+  background-color: white;
+  margin-top: 5px;
+  padding: 10px 15px;
+  }
+
+main {
+  width: 40%;
+  float: left;
+  margin-bottom: 10px;
+  margin-left: 30% ;
+  margin-right: 30%;
+  }
+
+aside {
+  background-color: #bbbbbb;
+  width: 40%;
+  float: right;
+  padding: 5px;
+  margin-top: 10px;
+  margin-right: 5%;
+  }
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1.2rem;
+  background-color: rgb(50, 50, 50);
+  border: 1px solid black;
+  color: white;
+  padding: 5px;
+  float: left;
+  text-decoration: none;
+  }
+
+footer a {
+  color: white;
+  text-decoration: none;
+  padding-left: 10px;
+  }
+
+footer a:hover {
+  color: lightgrey;
+  text-decoration: underline white;
+  }
+
+body {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(73, 73, 73);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 15px; 
+  }
+
+  #game {
+  position: relative;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  margin-top: 97px;
+  }  
+
+#defaultCanvas0 {
+  border: 3px solid black;
+
+  }
