--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ aside {
   background-color: rgb(50, 50, 50);
   border: 1px solid black;
   color: white;
-  padding: 5px;
+  padding: 5px 0px 5px 0px;
   float: left;
   text-decoration: none;
   }
