--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ aside {
 #footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 99.85%;
   height: 1.2rem;
   background-color: rgb(50, 50, 50);
   border: 1px solid black;
@@ -117,6 +117,8 @@ aside {
   padding: 5px 0px 5px 0px;
   float: left;
   text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
   }
 
 footer a {
