--- a/Parabel/style.css
+++ b/Parabel/style.css
@@ -135,7 +135,7 @@ article, aside, footer, header, main, nav, section {
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(73, 73, 73);
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Manrope", sans-serif;
     font-size: 15px; 
     }
   
