--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(73, 73, 73);
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Manrope", sans-serif;
   font-size: 15px; 
   }
 
