--- a/style.css
+++ b/style.css
@@ -1,136 +1,12 @@
 article, aside, footer, header, main, nav, section {
   display: block;
-  }
+}
 
 h1, h2, h3, ul, li, a, p, 
 article, aside, footer, header, main, nav, section {
   padding: 0;
   margin: 0;
-  }
-
-  #page-container {
-      position: relative;
-      min-height: 98vh;
-       }
-  
-  #content-wrap {
-      padding-bottom: 2.5rem;
-      }
-
-  #clock { 
-      color: white;
-      font-size: 175px; 
-      width: 1000px; 
-      margin: auto; 
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      position: absolute;
-      text-align: center; 
-      border: 4px solid white; 
-      border-radius: 20px; 
-    } 
-
-.banner {
-  background-color: rgb(50, 50, 50);
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  border: 1px solid black;
-  }
-
-nav {
-  background-color: rgb(50, 50, 50);
-  padding: 5px;
-  margin-top: 4px;
-  border: 1px solid black;
-  height: auto;
-  text-align: center
-  }
-
-li a {
-  color: white;
-  text-decoration: none;
-  padding: 5px;
-  }
-
-li a:hover {
-  color: lightgrey;
-  text-decoration: underline white;
-  }
-
-#current {
-  display: inline block;
-  color: white;
-  background-color: grey;
-  border-radius: 5px;
-  text-decoration: none;
-  }
-
-li {
-  display: inline;
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 20px;
-  font-variant: small-caps;
-  font-weight: bold;
-  }
-
-section {
-  background-color: #bbbbbb;
-  margin-top: 10px;
-  padding: 5px;
-  text-align: center;
-  }
-
-article {
-  background-color: white;
-  margin-top: 5px;
-  padding: 10px 15px;
-  }
-
-main {
-  width: 40%;
-  float: left;
-  margin-bottom: 10px;
-  margin-left: 30% ;
-  margin-right: 30%;
-  }
-
-aside {
-  background-color: #bbbbbb;
-  width: 40%;
-  float: right;
-  padding: 5px;
-  margin-top: 10px;
-  margin-right: 5%;
-  }
-
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 99.85%;
-  height: 1.2rem;
-  background-color: rgb(50, 50, 50);
-  border: 1px solid black;
-  color: white;
-  padding: 5px 0px 5px 0px;
-  float: left;
-  text-decoration: none;
-  margin-left: auto;
-  margin-right: auto;
-  }
-
-footer a {
-  color: white;
-  text-decoration: none;
-  padding-left: 10px;
-  }
-
-footer a:hover {
-  color: lightgrey;
-  text-decoration: underline white;
-  }
+}
 
 body {
   width: 95%;
@@ -139,17 +15,139 @@ body {
   background-color: rgb(73, 73, 73);
   font-family: "Manrope", sans-serif;
   font-size: 15px; 
-  }
+}
+    
+#page-container {
+  position: relative;
+  min-height: 98vh;
+}
+  
+#content-wrap {
+  padding-bottom: 2.5rem;
+}
 
-  #game {
+#clock { 
+  color: white;
+  font-size: 175px; 
+  width: 1000px; 
+  margin: auto; 
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  text-align: center; 
+  border: 4px solid white; 
+  border-radius: 20px; 
+} 
+
+.banner {
+  background-color: rgb(50, 50, 50);
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+
+}
+
+nav {
+  background-color: rgb(50, 50, 50);
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  margin-top: 5px !important;
+  list-style: none;
+  padding: 5px;
+  margin: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav a {
+  color: #a3a3a3;
+  margin-right: 10px;
+  text-decoration: none;
+  padding: 10px 12px;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  letter-spacing: 1.05px;
+  transition: ease 0.2s all;
+  border-radius: 3px;
+}
+nav a:not(#current):hover {
+  color: #fff;
+  text-decoration: underline;
+}
+nav a#current {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.03);
+  font-weight: bold;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.03);
+}
+
+section {
+  background-color: #bbbbbb;
+  margin-top: 10px;
+  padding: 5px;
+  text-align: center;
+}
+
+article {
+  background-color: white;
+  margin-top: 5px;
+  padding: 10px 15px;
+}
+
+main {
+  width: 40%;
+  float: left;
+  margin-bottom: 10px;
+  margin-left: 30% ;
+  margin-right: 30%;
+}
+
+aside {
+  background-color: #bbbbbb;
+  width: 40%;
+  float: right;
+  padding: 5px;
+  margin-top: 10px;
+  margin-right: 5%;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 99.85%;
+  height: 1.2rem;
+  background-color: rgb(50, 50, 50);
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  color: white;
+  padding: 5px 0px 5px 0px;
+  float: left;
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  padding-left: 10px;
+}
+
+footer a:hover {
+  color: lightgrey;
+  text-decoration: underline white;
+}
+
+#game {
   position: relative;
   display: flex;
   align-items: center; 
   justify-content: center;
   margin-top: 97px;
-  }  
+}  
 
 #defaultCanvas0 {
   border: 3px solid black;
-
-  }
+}
