--- a/Parabel/style.css
+++ b/Parabel/style.css
@@ -111,16 +111,18 @@ aside {
   padding: 5px 0px 5px 0px;
   float: left;
   text-decoration: none;
+
 }
 
 footer a {
-  color: white;
+  color: #a3a3a3;
   text-decoration: none;
   padding-left: 10px;
+  transition: ease 0.2s all;
 }
 
 footer a:hover {
-  color: lightgrey;
+  color: white;
   text-decoration: underline white;
 }
 
