--- a/style.css
+++ b/style.css
@@ -130,14 +130,15 @@ aside {
 }
 
 footer a {
-  color: white;
+  color: #a3a3a3;
   text-decoration: none;
   padding-left: 10px;
+  transition: ease 0.2s all;
 }
 
 footer a:hover {
-  color: lightgrey;
-  text-decoration: underline white;
+  color: white;
+  text-decoration: underline;
 }
 
 #game {
