--- a/About/style.css
+++ b/About/style.css
@@ -72,14 +72,15 @@ nav a#current {
 
 section {
   background-color: #bbbbbb;
-  margin-top: 100px;
+  margin-top: 10px;
   padding: 5px;
+  text-align: center;
 }
 
 article {
-  background-color: white;
-  margin-top: 5px;
-  padding: 10px 15px;
+background-color: white;
+margin-top: 5px;
+padding: 10px 15px;
 }
 
 main {
@@ -88,7 +89,7 @@ main {
   margin-bottom: 10px;
   margin-left: 30% ;
   margin-right: 30%;
-  }
+}
 
 aside {
   background-color: #bbbbbb;
@@ -123,3 +124,11 @@ footer a:hover {
   color: white;
   text-decoration: underline white;
 }
+
+#game {
+  position: relative;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  margin-top: 97px;
+}  
